# loader

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  commit.bat  loader.sublime-project  loader.sublime-workspace  main.cpp  stages
.github/: pull_request_template.md
.github/workflows/: bin-win32.yml  build.yml  test-windows.yml  test.yml  update.yml
dobby/: CMakeLists.txt
dobby/cmake/: Globals.cmake
dobby/source/: dobby.cpp
dobby/source/InstructionRelocation/x86/: X86InstructionRelocation.cc
dobby/source/InstructionRelocation/x86/x86_insn_decode/: x86_insn_decode.c  x86_opcode_modrm_reg_group.c  x86_opcode_one_byte.c  x86_opcode_sse_group.c  x86_opcode_two_byte.c
dobby/source/MemoryAllocator/: NearMemoryArena.cc
dobby/source/MemoryAllocator/CodeBuffer/: CodeBufferBase.cc  code-buffer-x64.cc  code-buffer-x86.cc
dobby/source/UserMode/ExecMemory/: code-patch-tool-darwin.cc
launcher/windows/: CMakeLists.txt
lilac/: CMakeLists.txt
lilac/include/geode/core/meta/: callconv.hpp  cdecl.hpp  common.hpp  defaultconv.hpp  function.hpp  hook.hpp  membercall.hpp  optcall.hpp  thiscall.hpp  tuple.hpp  x86.hpp
loader-core/: CLIManager.cpp  Hook.cpp  Interface.cpp  Loader.cpp  Log.cpp  Mod.cpp  Patch.cpp  Setting.cpp  clilac.cpp  load.cpp
loader-core/internal/: FileWatcher.hpp  FileWatcherWin.cpp  FileWatcherWin.hpp  Internal.cpp  Internal.hpp  InternalMod.cpp  InternalMod.hpp
loader-core/platform/windows/: IMPLEMENT.md
resources/: .geode-button-gold.png-autosave.kra
src/: CLIManager.cpp  Event.cpp  Hook.cpp  Interface.cpp  Loader.cpp  Log.cpp  Mod.cpp  Notification.cpp  OnMoreGames.cpp  Patch.cpp  Setting.cpp  Temp.cpp  cgeode.cpp  clilac.cpp  entry.cpp  entry.hpp  load.cpp  main.cpp
src/CCZipUtils/: CCLabelBMFont.cpp  CMakeLists.txt  ZipUtils.cpp  ioapi.cpp
src/addressertest/: CMakeLists.txt  test.cpp
src/cocos2d-ext/: RecursiveMenu.cpp  ZipUtils.cpp
src/core/: Core.cpp  Core.hpp  Hook.cpp  Inline.hpp  MacOS.cpp  MacOS.hpp  Platform.hpp  Windows.cpp  Windows.hpp
src/core/bandaid/: GDML.hpp
src/fixes/: DictionaryFixes.cpp  HandlerFixes.cpp
src/gdstdlib/android/: string.cpp
src/gdstdlib/mac/: string.cpp
src/gui/: DevSettingsLayer.cpp  DevSettingsLayer.hpp  HookListLayer.cpp  HookListView.cpp  HookListView.hpp  ModInfoLayer.cpp  ModInfoLayer.hpp  ModListLayer.cpp  ModListLayer.hpp  ModListView.cpp  ModListView.hpp  ModSettingsLayer.cpp  ModSettingsLayer.hpp  ModSettingsListView.cpp  ModSettingsListView.hpp  SettingNode.cpp  SettingNode.hpp
src/gui/loading/: GeodeLoadingLayer.hpp
src/gui/mods/dev/: DevSettingsLayer.cpp  HookListLayer.cpp  HookListView.cpp  HotReloadLayer.cpp  HotReloadLayer.hpp
src/gui/mods/info/: ModInfoLayer.cpp  ModSettingsLayer.cpp
src/gui/mods/list/: ModListLayer.cpp  ModListView.cpp
src/gui/mods/settings/: ModSettingsListView.cpp
src/helper/: AlertPopup.cpp  RecursiveMenu.cpp
src/hooks/: GameManager.cpp  LoadingLayer.cpp  MenuLayer.cpp  dispatchMsg.cpp  dummy.cpp  handler_fixes.cpp  hook.hpp  keyDownUp.cpp  save.cpp  update.cpp  updateResources.cpp  update_resources.cpp
src/internal/: FileWatcher.hpp  FileWatcherMac.hpp  FileWatcherMac.mm  FileWatcherWin.cpp  FileWatcherWin.hpp  Internal.cpp  Internal.hpp  InternalLoader.cpp  InternalLoader.hpp  InternalMod.cpp  InternalMod.hpp  about.hpp  about.hpp.in  crashlog.hpp
src/internal/ios/: FileWatcher.mm
src/internal/mac/: FileWatcher.mm  crashlog.cpp
src/internal/windows/: FileWatcher.cpp  crashlog.cpp
src/keybinds/: Keybind.cpp  KeybindAction.cpp  KeybindManager.cpp  defaultBinds.cpp
src/load/: Dispatcher.cpp  Event.cpp  Hook.cpp  Interface.cpp  Loader.cpp  Log.cpp  Mod.cpp  Notification.cpp  Patch.cpp  Setting.cpp  load.cpp
src/load/android/: Mod.cpp
src/load/ios/: Mod.mm
src/load/mac/: Mod.mm
src/load/macos/: Mod.mm
src/load/windows/: Mod.cpp
src/platform/: entry.cpp  entry.hpp
src/platform/ios/: FileWatcheriOS.hpp  FileWatcheriOS.mm  Mod.mm  Utils.mm  iosEntry.cpp
src/platform/macos/: FileWatcherMac.hpp  FileWatcherMac.mm  Mod.mm  Utils.mm  gdstdlib.cpp  macEntry.cpp
src/platform/windows/: FileWatcherWin.cpp  FileWatcherWin.hpp  Mod.cpp  Utils.cpp  winEntry.cpp
src/utils/: VersionInfo.cpp  addresser.cpp  cocos.cpp  file.cpp  general.cpp  map.cpp  node.cpp  string.cpp  vector.cpp  version.cpp
src/utils/android/: util.cpp
src/utils/ios/: util.mm
src/utils/mac/: util.mm
src/utils/platform/: macos.mm
src/utils/windows/: util.cpp
src/utils/zip/: ioapi.cpp  unzip.cpp
test/: CMakeLists.txt  shared.hpp
test/addresser/: CMakeLists.txt  test.cpp
test/dependency/: CMakeLists.txt  main.cpp  mod.json
test/main/: CMakeLists.txt  main.cpp  mod.json
test/mod1/: CMakeLists.txt  mod.json  mod1.cpp  mod1.hpp
test/mod2/: CMakeLists.txt  mod.json  mod2.cpp  mod2.hpp
test/mod3/: CMakeLists.txt  mod.json  mod3.c  mod3.h
test/mod4/: CMakeLists.txt  mod.json  mod4.cpp  mod4.hpp
test/mod5/: CMakeLists.txt  mod.json  mod5.cpp  mod5.hpp
test/mod6/: CMakeLists.txt  mod.json  mod6.cpp
test/mod7/: CMakeLists.txt  mod.json  mod7.cpp  mod7.hpp
test/mod8/: CMakeLists.txt  mod.json  mod8.cpp  mod8.hpp
unit/: CMakeLists.txt
unit/addresser/: CMakeLists.txt  test.cpp
utils/include/helpers/: CMakeLists.txt  VersionInfo.hpp  string.hpp  timer.hpp  vector.hpp
utils/src/: VersionInfo.cpp  general.cpp
utils/src/windows/: platform.cpp
